[package]
name = "lc3dbg"
version = "1.1.0"
authors = ["cr0sh <ska827@snu.ac.kr>"]
edition = "2018"

description = "Command-line LC-3 debugger"
license = "GPL-2.0-only"
readme = "README.md"
repository = "https://github.com/cr0sh/lc3dbg"
keywords = ["lc-3", "lc3", "debugger", "command-line"]
categories = ["command-line-utilities", "development-tools", "simulation" ]

[dependencies]
lc3-rs = "0.2"
failure = "0.1"
console = "0.7"
pretty-bytes = "0.2"
arraydeque = "0.4"
regex = "1.1"
lazy_static = "1.3"
